--- a/index.html
+++ b/index.html
@@ -3,9 +3,46 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" sizes="32x32" type="image.png" href="./images/favicon-32x32.png">
+    <link rel="stylesheet" href="./Styles/styles.css">
+    <link rel="stylesheet" href="./Styles/tablet768.css" media="screen and (min-width: 768px)">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&family=Noto+Sans:wght@300;400&display=swap"
+      rel="stylesheet"
+    />
+    <title>Document El </title>
 </head>
 <body>
-    
+    <article class="card">
+        <img src="./images/bg-pattern-card.svg" alt="" class="profile-back">
+        <div>
+          <div class="image-profile">
+            <img src="./images/image-victor.jpg" alt="victor-profile">
+          </div>
+          <div class="description">
+            <div class="data">
+              <span>Victor Crest</span>
+              <span>26</span>
+            </div>
+            <span>London</span>
+          </div>
+          <div class="stat">
+            <div >
+              <span>80K</span>
+              <span>Followers</span>
+            </div>
+            <div>
+              <span>803K</span>
+              <span>Likes</span>
+            </div>
+            <div>
+              <span>1.4K</span>
+              <span>Photos</span>
+            </div>
+          </div>
+        </div>
+      </article>
 </body>
 </html>
